--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,11 @@
-@import './abstracts/module';
-@import './base/module';
+@import "base";
+@import "typography";
+
+@import "sidebar";
+@import "header";
+@import "realtors";
+@import "features";
+@import "story";
+@import "homes";
+@import "gallery";
+@import "footer";
