--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,3 +13,42 @@ $color-grey-dark-2: #6D5D4B;
 // FONT VARIABLES
 $font-primary: 'Nunito', sans-serif;
 $font-display: 'Josefin Sans', sans-serif;
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: $font-primary;
+  color: $color-grey-dark-2;
+  font-weight: 300;
+  line-height: 1.6;
+}
+
+.container {
+  display: grid;
+  grid-template-rows:
+    80vh
+    min-content
+    40vw
+    repeat(3, min-content);
+  grid-template-columns: 
+    [sidebar-start]
+    8rem // Sidebar Column
+    [sidebar-end full-start]
+    minmax(6rem, 1fr) // left main grid border
+    [center-start]
+    repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) // 8 column grid - content
+    [center-end]
+    minmax(6rem, 1fr) // rigth main grid border
+    [full-end];
+}
