--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -6,6 +6,13 @@
 
   display: flex;
   justify-content: center;
+
+  @media only screen and (max-width: $bp-lg) {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+    justify-content: flex-end;
+    align-items: center;
+  }
 }
 
 .nav-btn {
@@ -32,5 +39,13 @@
 
   &::after {
     transform: translateY(1.4rem);
+  }
+
+  @media only screen and (max-width: $bp-lg) {
+    margin-top: 0;
+    margin-right: 3rem;
+
+    &::before { transform: translateY(-1.2rem); }
+    &::after { transform: translateY(1.1rem); }
   }
 }
