--- a/src/styles/_story.scss
+++ b/src/styles/_story.scss
@@ -10,6 +10,12 @@
     align-items: center;
 
     background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
+    background-size: cover;
+
+    @media only screen and (max-width: $bp-md) {
+      grid-column: 1 / -1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -17,6 +23,13 @@
     grid-row: 2 / 6;
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+    @media only screen and (max-width: $bp-md) {
+      grid-column: 1 / 5;
+      grid-row: 1 / -1;
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__img--2 {
@@ -25,6 +38,11 @@
     grid-column: 4 / 7;
     z-index: 1;
     box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+    @media only screen and (max-width: $bp-md) {
+      grid-row: 1 / -1;
+      width: 100%;
+    }
   }
 
   &__content {
@@ -37,6 +55,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+
+    @media only screen and (max-width: $bp-md) {
+      grid-column: 1 / -1;
+      grid-row: 5 / 6;
+    }
   }
 
   &__text {
